added work sans google font

--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <title>G3 Architects</title>
     <link rel="stylesheet" href="styles/architects.css">
 </head>
-<body>
+<body class="work-sans-font">
     <header>
-
+        <h3 class="navbar">G3 Architects</h3>
     </header>
     <main>
 
     </main>
     <footer>
-        
+
     </footer>
 </body>
 </html>
