--- a/index.html
+++ b/index.html
@@ -7,8 +7,27 @@
     <link rel="stylesheet" href="styles/architects.css">
 </head>
 <body class="work-sans-font">
-    <header>
-        <h3 class="navbar">G3 Architects</h3>
+    <header class="bg-light">
+        <nav class="navbar display-flex">
+            <h3 class="brand">G3 Architects</h3>
+            <ul class="nav-links display-flex">
+                <!-- li.nav-items*4>a.nav-item -->
+                                                      
+                <li class="nav-items"><a href="" class="nav-item text-grey">Home</a></li>
+                <li class="nav-items"><a href="" class="nav-item text-grey">About</a></li>
+                <li class="nav-items"><a href="" class="nav-item text-grey">Contact Us</a></li>
+                <li class="nav-items"><a href="" class="nav-item text-grey">Login</a></li>
+            </ul>
+        </nav>
+        <div class="banner">
+            <div class="banner-content">
+                <h1 class="banner-title">Brand New Group of Architects </h1>
+            <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+            <button class="btn-primary">Explore More</button>
+            
+            </div>
+            <img class="banner-image" src="images/banner.png" alt="">
+        </div>
     </header>
     <main>
 
